Data race between Client::setService and Client::getService

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2024-09-16
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      With all feature flags enabled, TSAN reports a data race between Client::setService and Client::getService in the test multi_statement_transaction_kill_sessions_atomicity_isolation.js under the suite concurrency_replication_with_replica_set_endpoint.

            Assignee:
            Aitor Esteve Alvarado
            Reporter:
            Ryan Berryhill
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: