SERVER-93364 Use ClientLock before every call to setService (#26862)

GitOrigin-RevId: 33223637660367af2dfe4aa6f505c9872127bfb0